fix ui bug issues - height, width and spacing

--- a/css/global/global.sass
+++ b/css/global/global.sass
@@ -11,7 +11,7 @@ body
 
 .container
     width: 80%
-    max-width: 1400px
+    max-width: 1300px
     margin: auto 
 
 // --------------------------------------------------------------- NAVBAR --------------------------------------------------------------- //
@@ -97,7 +97,7 @@ body
             .box-feature
                 margin-top: 10px
                 width: 24%
-                // max-width: 280px
+                // max-width: 300px
 
                 img 
                     margin-bottom: 2em
@@ -109,7 +109,7 @@ body
                     font-size: 1.6em
                     font-weight: 400
                     color: $primary-color
-                    margin-bottom: .5em
+                    margin-bottom: .7em
 
 // --------------------------------------------------------------- SECTION 2 --------------------------------------------------------------- //
 // --------------------------------------------------------------- SECTION 2 --------------------------------------------------------------- //
@@ -130,7 +130,8 @@ body
 
             .card
                 background: $white
-                width: 24%
+                // width: 25%
+                max-width: 300px
                 border-radius: 8px
 
                 img 
