--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ body {
 
 .container {
   width: 80%;
-  max-width: 1400px;
+  max-width: 1300px;
   margin: auto;
 }
 
@@ -103,7 +103,7 @@ body {
   font-size: 1.6em;
   font-weight: 400;
   color: #2d314d;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.7em;
 }
 
 .section-2 {
@@ -122,7 +122,7 @@ body {
 }
 .section-2 .container .cards-list .card {
   background: #fff;
-  width: 24%;
+  max-width: 300px;
   border-radius: 8px;
 }
 .section-2 .container .cards-list .card img {
@@ -158,6 +158,7 @@ p.global-text {
   color: #9698a6;
   margin-bottom: 2.5em;
   line-height: 1.5em;
+  font-size: 1.2em;
 }
 
 /*# sourceMappingURL=main.css.map */
