--- a/css/typography/typography.sass
+++ b/css/typography/typography.sass
@@ -4,3 +4,4 @@ p.global-text
     color: $secondary-color
     margin-bottom: 2.5em
     line-height: 1.5em
+    font-size: 1.2em
